<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_portrait"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/mr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_item"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_item"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/mrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_item"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/dr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_item"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/First_Name"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:inputType="textCapWords"
                android:paddingLeft="9dp"

                android:paddingTop="9dp"
                android:paddingBottom="9dp" />
        </TableRow>

        <TableRow>
            <TextView

                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingLeft="9dp"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/Last_Name"

                android:layout_height="40dp"
                android:background="@color/white"
                android:inputType="textCapWords"
                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"

                android:layout_marginRight="10dp"/>

        </TableRow>

        <TableRow>
            <TextView

                android:layout_height="wrap_content"
                android:text="@string/address"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingLeft="9dp"
                android:layout_marginBottom="20dp"
                />
            <EditText
                android:id="@+id/Address"

                android:layout_height="40dp"
                android:background="@color/white"
                android:paddingLeft="9dp"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:layout_marginRight="10dp"/>

        </TableRow>
        <TableRow>
            <TextView

                android:layout_height="wrap_content"
                android:text="@string/province"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingLeft="9dp"
                android:layout_marginBottom="20dp"
                />
            <Spinner
                android:id="@+id/Province"

                android:layout_height="40dp"
                android:background="@color/white"
                android:paddingLeft="9dp"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:tooltipText="@string/select_province"

                android:layout_marginRight="10dp"/>

        </TableRow>

        <TableRow>

            <TextView

                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/country" />

            <EditText
                android:id="@+id/Country"

                android:layout_height="40dp"

                android:background="@color/white"
                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:layout_marginRight="10dp"/>

        </TableRow>
        <TableRow>

            <TextView

                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/postalcode" />

            <EditText
                android:id="@+id/PostalCode"

                android:layout_height="40dp"
                android:layout_marginRight="10dp"

                android:background="@color/white"
                android:paddingLeft="9dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp" />

            <Button
                android:id="@+id/Submit"
                android:background="@color/LightGrey"
                android:text="@string/submit_button"
                />

        </TableRow>



    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>